# fleet-editor-extensions

./: .fleetlint.example.toml  .gitignore  .pre-commit-hooks.yaml  Cargo.toml  README.md
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: fleet-sync.yml  release-linux.yml  release.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
crates/flint-lint/: Cargo.toml
crates/flint-lint/skills/: fleet-migrate.md  flint.md
crates/flint-lint/src/: config.rs  deprecation_rule.rs  deprecations.rs  engine.rs  error.rs  fleet_config.rs  help_agents.rs  init.rs  lib.rs  osquery.rs  rules.rs  self_reference.rs  semantic.rs  structural.rs  structure.rs  version.rs  version_gate.rs  yaml_lint.rs  yaml_utils.rs
crates/flint-lint/tests/: fleet_compat.rs
crates/flint-lsp/: Cargo.toml
crates/flint-lsp/data/: completions.toml  fma-registry.toml
crates/flint-lsp/src/: backend.rs  code_actions.rs  completion.rs  completion_data.rs  diagnostics.rs  fleet.rs  hover.rs  json_hover.rs  lib.rs  position.rs  schema.rs  semantic_tokens.rs  symbols.rs  workspace.rs
docs/: pyproject.toml  wrangler.toml  zensical.toml
docs/docs/: api-reference.md  ci.md  configuration.md  editors.md  fleet-variables.md  getting-started.md  index.md  install.md  migration.md  rules.md
editors/jetbrains/: build.gradle.kts
editors/neovim/lua/: flint.lua
editors/sublime/: LSP-flint.sublime-settings  plugin.py
editors/sublime/messages/: install.txt
editors/vscode/: .vscodeignore  README.md  esbuild.js  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/walkthroughs/: add-fleet.md  explore.md  (+2 more)
editors/zed/: Cargo.toml  README.md  extension.toml
flint-action/: action.yml  example-workflow.yml
pkg/flint/: build-info.toml
scripts/: build-release.sh  install.sh
sync/: sync.toml
(+3 files in other folders)
