[package]
name = "flint"
version.workspace = true
edition.workspace = true
description = "Flint — Fleet GitOps YAML linter and language server"

[[bin]]
name = "flint"
path = "src/main.rs"

[dependencies]
flint-lint = { path = "../crates/flint-lint" }
flint-lsp = { path = "../crates/flint-lsp" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
tokio = { version = "1.42", features = ["full", "io-std"] }
colored = "2.1"

[build-dependencies]
chrono = "0.4"
