[package]
name = "flint-lint"
version.workspace = true
edition.workspace = true
description = "Fleet GitOps YAML linter — lint engine and rules"

[lib]
name = "flint_lint"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
toml = "0.8"
once_cell = "1.20"
rayon = "1.10"
colored = "2.1"
annotate-snippets = "0.11"
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pathdiff = "0.2"
tempfile = "3.14"

[dev-dependencies]
tempfile = "3.14"
