[package]
name = "flint-lsp"
version.workspace = true
edition.workspace = true
description = "Fleet GitOps YAML language server"

[lib]
name = "flint_lsp"

[dependencies]
flint-lint = { path = "../flint-lint" }
tower-lsp = "0.20"
tokio = { version = "1.42", features = ["full", "io-std"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
once_cell = "1.20"
toml = "0.8"
regex = "1.11"
tempfile = "3.14"
pathdiff = "0.2"
